--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -160,6 +160,14 @@ main{
     margin: 0.5rem 0;
 }
 
+#modifier{
+    position: absolute;
+    left: 1rem;
+    bottom: 3.5rem;
+    padding: 2px;
+    background-color: #3D0085;
+}
+
 /*BUTTON TO ADD A NEW PARTY MEMBER*/
 button{
     position: relative;
