--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -11,11 +11,12 @@ html, body{
 }
 
 main{
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
     height: 100%;
     background-color: #211919
 }
-
 
 
 .cell {
