--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -3,42 +3,45 @@
 html{
     font-size: 16px;
     color: #707070;
-}
-
-html, body{
-    height: 100%;
-    margin: 0;
+    background-color: #211919;
 }
 
 main{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
-    background-color: #211919
+    height: 100%
 }
 
+#table{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 1440px;
+    height: 100%;
+    margin: auto;
+    padding: 3rem;
+    background-color: #211919;
+}
+
+.row{
+    display: flex;
+    position: relative;
+}
 
 .cell {
     position: relative;
     width: 80px; 
     height: 46.19px;
     background-color: #211919;
-    margin: 23.09px 0;
     border-left: solid 3px #707070;
     border-right: solid 3px #707070;
-    margin: 0
+    z-index: 0;
   }
   
   .cell:before,
   .cell:after {
     content: "";
     position: absolute;
-    z-index: 1;
     width: 56.57px;
     height: 56.57px;
-    -webkit-transform: scaleY(0.5774) rotate(-45deg);
-    -ms-transform: scaleY(0.5774) rotate(-45deg);
     transform: scaleY(0.5774) rotate(-45deg);
     background-color: inherit;
     left: 8.7157px;
@@ -61,6 +64,7 @@ main{
     display: flex;
     flex-direction: column;
     position: fixed;
+    z-index: 50;
 }
 
 .hero{
